--- a/client/templates/layout_chat.jade
+++ b/client/templates/layout_chat.jade
@@ -5,7 +5,7 @@ html(lang="en")
 		block title
 			title Default title
 		link(rel='stylesheet', href='static/css/normalize.css')
-		link(rel='stylesheet', href='static/css/chat.css')
+		link(rel='stylesheet', href='static/css/app.css')
 	body
 		block content
 		script(src='static/js/jquery.js')
