--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -1,23 +1,14 @@
-
-
 /* Flex */
-body{
-    min-height:100vh;
-    display:flex;
-}
-.panel-start{ display:flex; flex:1;}
-.panel-window{ margin: auto; display:flex; flex-direction:column; width: 300px;}
-.menu{ width:220px; }
-.content{ display: flex; flex-direction:column; flex:1;}
-.insert-text {  padding: 3px;  margin-top: auto; display:flex;}
-#messages { margin: 0; padding: 0; flex:1;}
-#m {flex:1;}
+body{ min-height:100vh; display:flex;}
+#panel-start{ display:flex; flex:1;}
+#panel-window-min{ margin: auto; display:flex; flex-direction:column; width: 300px;}
+#menu{ width:220px;}
+#content{ display: flex; flex-direction:column; flex:1;}
+#insert-text { margin-top: auto; display:flex;}
+#messages { flex:1;}
+#m { flex:1;}
 
 /* Action */
-
-.removed{
-    display:none;
-}
-
+.removed{ display:none !important;}
 
 /* Style */
