--- a/client/templates/chat.jade
+++ b/client/templates/chat.jade
@@ -8,18 +8,13 @@ block content
 	#panel-start
 		#panel-window-min
 			#panel-content
-				h1 Chat Square
-				br
+				h1 Square
 				form.insert-connect
 					input(type='text', placeholder="Your username", autofocus="1", autocomplete='off', name="username")
-					br
-					br
 					input(type='email', placeholder="Your mail" name="mail")
-					br
-					br
-					a#connect Go !			
+					button#connect Let's go !
 	#menu.removed
-			h1 Chat Square
+			h1 Square
 			h2 Channels 
 			ul
 				li #General
