--- a/client/templates/layout_chat.jade
+++ b/client/templates/layout_chat.jade
@@ -4,6 +4,7 @@ html(lang="en")
 		meta(charset="utf-8")
 		block title
 			title Default title
+		link(href='https://fonts.googleapis.com/css?family=Roboto:300,500,700' rel='stylesheet' type='text/css')
 		link(rel='stylesheet', href='static/css/normalize.css')
 		link(rel='stylesheet', href='static/css/app.css')
 	body
