--- a/client/templates/chat.jade
+++ b/client/templates/chat.jade
@@ -14,11 +14,12 @@ block content
 					input(type='email', placeholder="Your mail" name="mail")
 					button#connect Let's go !
 	#menu.removed
-			h1 Square
-			h2 Channels 
+			h2 Square
+			h4 Channels 
 			ul
-				li #General
-			h2 Users 
+				li #general
+			br
+			h4 Users 
 			ul#users 
 	#content.removed
 		ul#messages
